[workspace]
members = ["programs/claim"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"

# 👇 Force crates to versions that work with Solana's Rust (1.75.x dev)
[patch.crates-io]
indexmap      = "=2.2.6"
toml_datetime = "=0.6.3"
toml_edit     = "=0.21.1"
toml_parser   = "=0.6.3"
