[workspace]
members = ["programs/claim"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"

# 🔧 Pin TOML + indexmap crates so they work with Solana's SBF rustc
[patch.crates-io]
indexmap      = "=2.2.6"
toml_datetime = "=0.6.3"
toml_edit     = "=0.22.2"
toml_parser   = "=0.6.3"
